<resources>
    <string name="app_name">WifiBackup</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Network</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="show">Show</string>
    <string name="edit">Edit</string>
    <string name="editWifiMessage">Edit existing Wifi connection</string>
    <string name="addWifiMessage">Insert new Wifi connection</string>

    <!-- POPUP MENU -->
    <string name="popup_edit">Edit</string>
    <string name="popup_showPassword">Show password</string>
    <string name="popup_showDetails">Show Details</string>
    <string name="popup_delete">Delete</string>

    <string name="syncSavedWifi">test</string>

    <!-- ELEMENTS -->
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="owner">Owner</string>
    <string name="comment">Comment</string>
    <string name="provider">Provider</string>
    <string name="location">Location</string>

    <!-- PROVIDERS -->
    <string name="unknown">unknown</string>
    <string name="telekom">Telekom</string>
    <string name="unitymedia">Unitymedia</string>
    <string name="vodafone">Vodafone</string>
    <string name="einsundeins">1&amp;1</string>
    <string name="otwo">O2</string>

</resources>
